<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".profileActivity">

    <TextView
        android:id="@+id/profileWinTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="282dp"
        android:layout_marginBottom="520dp"
        android:text="Wins"
        android:textColor="#BD043E"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileWins"
        android:layout_width="93dp"
        android:layout_height="37dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="235dp"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileLosses"
        android:layout_width="73dp"
        android:layout_height="40dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="234dp"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileLossTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="522dp"
        android:text="Losses"
        android:textColor="#BD043E"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="111dp"
        android:text="Welcome User!"
        android:textColor="#BD043E"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profileCreateTeam"
        android:layout_width="141dp"
        android:layout_height="72dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="586dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="73dp"
        android:background="@color/colorPrimaryDark"
        android:text="Create Team"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profileJoinTeamButton"
        android:layout_width="141dp"
        android:layout_height="72dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="488dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="171dp"
        android:background="@color/colorPrimaryDark"
        android:text="Join Team"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profileStartGame"
        android:layout_width="141dp"
        android:layout_height="72dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="488dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="171dp"
        android:background="@color/colorPrimaryDark"
        android:text="Start Game"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goToTeamPage"
        android:layout_width="145dp"
        android:layout_height="73dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="586dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="72dp"
        android:background="@color/colorPrimaryDark"
        android:text="Your Teams"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>