...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JoinTeam"
    android:background="@color/colorPrimary">
    <TextView
        android:id="@+id/registerTeamTitle"
        android:layout_width="191dp"
        android:layout_height="77dp"
        android:layout_marginTop="38dp"
        android:text="Join Team"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
...
        android:hint="Team Code"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/joinTeamButton"
        android:layout_width="239dp"
        android:layout_height="59dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="548dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="124dp"
...
